# kenjutu

./: .gitignore  .luarc.json  .prettierignore  CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.md  cspell.json  eslint.config.js  index.html  package.json  playwright-ct.config.ts  pnpm-lock.yaml  tlconfig.lua  tsconfig.json  vite.config.ts  vitest.config.ts
.claude/: settings.json
.claude/hooks/: install-jujutsu.sh
.github/workflows/: build-desktop.yml  ci.yml  release-kjc.yml  release.yml
.sqlx/: query-3194c18dd4bf63eef6578b865abdfacc53a23366871e2254fcf214d8639e2939.json  query-d059fef701bbc776cca9673669e707eda23cabd0fb07f750c1df9ce4f875844c.json
crates/comment-commit/: Cargo.toml
crates/comment-commit/src/: comment_commit.rs  comment_commit_lock.rs  lib.rs  materialize.rs  model.rs  porting.rs  tree_builder_ext.rs
crates/kenjutu-core/: Cargo.toml
crates/kenjutu-core/src/models/: change_id.rs  jj.rs  mod.rs  pr.rs
crates/kenjutu-core/src/services/: git.rs  graph.rs  highlight.rs  jj.rs  mod.rs  word_diff.rs
crates/kenjutu-core/src/services/diff/: file_diff.rs  file_list.rs  mod.rs
crates/kenjutu-tui/: Cargo.toml
crates/kenjutu-tui/src/: app.rs  data.rs  main.rs
crates/kenjutu-tui/src/ui/: commits.rs  diff.rs  files.rs  mod.rs
crates/kenjutu-types/: Cargo.toml
crates/kenjutu-types/src/: change_id.rs  commit_id.rs  lib.rs
crates/kenjutu-types/tests/: change_id.rs
crates/marker-commit/: Cargo.toml
crates/marker-commit/src/: apply_hunk.rs  apply_region.rs  conflict.rs  lib.rs  marker_commit.rs  marker_commit_lock.rs  materialize_tree.rs  octopus_merge.rs  tree_builder_ext.rs
crates/test-repo/: Cargo.toml
crates/test-repo/src/: lib.rs
docs/: comment-cli.md  desktop-keybindings.md  desktop.md  nvim-plugin.md  tui.md
docs/research/: octo-nvim-comments.md
lua/kenjutu/: comment_picker.lua  comments.lua  diff.lua  file_list.lua  file_render.lua  file_tree.lua  gh.lua  health.lua  init.lua  install.lua  jj.lua  kjn.lua  log.lua  pr.lua  pr_picker.lua  review.lua  squash_files.lua  utils.lua
playwright/: index.html  index.tsx
plugin/: kenjutu.lua
src/: App.tsx  bindings.ts  index.css  main.tsx  routeTree.gen.ts
src-cli/: Cargo.toml
src-cli/src/: get.rs  main.rs  output.rs  resolve.rs  status.rs
src-nvim/: Cargo.toml  FEATURE_DESIGN.md
src-nvim/lua/kenjutu/: diff.lua  file_list.lua  jj.lua  kjn.lua  log.lua  review.lua  utils.lua
src-nvim/src/: main.rs  serve.rs
src-nvim/src/commands/: blob.rs  files.rs  log.rs  mark.rs  mark_hunk.rs  mark_region.rs  marker_blob.rs  mod.rs  set_blob.rs
src-tauri/: .gitignore  .taurignore  Cargo.toml  build.rs  pr  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 20251206174241_init.sql  20260110120000_reviewed_files.sql
src-tauri/src/: db.rs  github.rs  lib.rs  main.rs  pr.rs  state.rs  test_utils.rs
src-tauri/src/commands/: auth.rs  comments.rs  jj.rs  mod.rs  pr.rs  repo.rs  settings.rs
src-tauri/src/config/: mod.rs
src-tauri/src/db/: models.rs  reviewed_file.rs
src-tauri/src/errors/: mod.rs
src-tauri/src/models/: auth.rs  change_id.rs  git.rs  jj.rs  mod.rs  pr.rs  repo.rs  settings.rs  user.rs
src-tauri/src/services/: auth.rs  diff.rs  git.rs  github.rs  highlight.rs  jj.rs  mod.rs  pull_request.rs  repository.rs  repository_cache.rs  review.rs  review_repository.rs  ssh.rs  word_diff.rs
src-tauri/src/services/diff/: file_diff.rs  file_list.rs  mod.rs
src-tui/: Cargo.toml
src-tui/src/: ansi.rs  app.rs  color.rs  error.rs  jj_graph.rs  jj_log.rs  jj_ops.rs  lib.rs  main.rs  tui.rs
src-tui/src/screens/: commit_log.rs  diff_panel.rs  mod.rs  review.rs
src-tui/src/screens/review/: diff_panel.rs  diff_view.rs
src-tui/src/widgets/: commit_list.rs  diff_view.rs  file_list.rs  header.rs  mod.rs  range_list.rs  status_bar.rs  text_input.rs
src/components/: AppCommands.tsx  AppHeader.tsx  AppTabs.tsx  CommitDiffSection.tsx  CommitGraph.tsx  DeviceAuth.tsx  FileTree.tsx  InlineCommentForm.tsx  LocalChangesTab.tsx  MarkdownContent.module.css  MarkdownContent.tsx  ScrollFocus.pw.test.tsx  ScrollFocus.test-utils.tsx  ScrollFocus.test.tsx  ScrollFocus.tsx  error.tsx
src/components/AppHeader/: AppCommands.tsx  DeviceAuth.tsx  index.tsx
src/components/Diff/: CommitDiffSection.tsx  DiffViews.tsx  DualDiff.tsx  FileDiffItem.tsx  FileTree.tsx  GapRow.tsx  Header.tsx  InlineThreadDisplay.tsx  LineCommentButton.tsx  LineNumberGutter.tsx  SplitDiff.tsx  UnifiedDiff.tsx  VirtualizedDiff.tsx  diffStyles.ts  hunkGaps.ts  index.ts  splitViewPairing.ts  types.ts  useCommentForm.tsx  useContextExpansion.ts  useDiffViewMode.ts  useHunkReview.ts  useLineDrag.tsx  useLineMode.test.ts  useLineMode.ts  useLineSelection.test.ts  useLineSelection.ts  (+3 more)
src/context/: GithubContext.tsx  ScrollFocusContext.tsx  ShaToChangeIdContext.tsx  TabsContext.tsx
src/hooks/: useCommitComments.ts  useCommitFileList.ts  useDebouncedValue.ts  useIsFocused.ts  useJjLog.ts  useJjStatus.ts  useLocalRepos.ts  useMergePullRequest.ts  usePullRequest.ts  usePullRequestDetails.ts  usePullRequests.ts  useRepositories.ts  useRepository.ts  useRpcQuery.ts  useScrollFocus.ts  useTab.ts
src/lib/: auth.ts  fileTree.ts  queryKeys.ts  repos.ts  timeUtils.ts
src/routes/: __root.tsx  index.tsx  pulls.$nodeId.$number.tsx  pulls.$owner.$repo.$number.tsx  pulls.$repoId.$number.tsx  pulls.$user.$name.$number.tsx  repos.$nodeId.tsx  repos.$owner.$repo.tsx  repos.$repoId.tsx  repos.$user.$name.tsx
tests/: TEST_PLAN.md  minimal_init.lua  run.lua  test.lua  test_ansi.lua  test_comments.lua  test_diff.lua  test_file_list.lua  test_file_render.lua  test_file_tree.lua  test_log_screen.lua  test_review.lua  test_squash.lua  test_utils.lua  utils.lua
tests/e2e/: helpers.lua  test_e2e_file_tree.lua  test_e2e_log.lua  test_e2e_review.lua  test_kjn_calls.lua
tl/plugin/: kenjutu.tl
tl/tests/: run.tl  test.tl  test_ansi.tl  test_comments.tl  test_diff.tl  test_file_render.tl  test_log_screen.tl  test_review.tl  test_squash.tl  test_utils.tl  utils.tl
types/: vim.d.tl
(+92 files in other folders)
