[package]
name = "kenjutu-comments"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "kenjutu-comments"
path = "src/main.rs"

[dependencies]
comment-commit = { path = "../crates/comment-commit" }
kenjutu-core = { path = "../crates/kenjutu-core" }
kenjutu-types = { path = "../crates/kenjutu-types", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
git2 = "0"
anyhow = "1"
