[package]
name = "kenjutu-comments"
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Kenjutu comment CLI — diff comments as JSON for agents and tooling"
edition = "2024"

[[bin]]
name = "kjc"
path = "src/main.rs"

[dependencies]
comment-commit = { path = "../crates/comment-commit" }
kenjutu-types = { path = "../crates/kenjutu-types", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
git2 = "0"
anyhow = "1"
