[package]
name = "kenjutu-comments"
version = "0.2.0"
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Kenjutu comment CLI — diff comments as JSON for agents and tooling"
edition = "2024"

[[bin]]
name = "kjc"
path = "src/main.rs"

[dependencies]
comment-commit = { workspace = true }
kenjutu-types = { workspace = true, features = ["serde"] }
clap = { version = "4", features = ["derive"] }
serde = { workspace = true }
serde_json = { workspace = true }
git2 = { workspace = true }
anyhow = { workspace = true }

[features]
vendored-openssl = ["git2/vendored-openssl"]
