[package]
name = "kenjutu-nvim"
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Kenjutu Neovim backend — daemon for the Neovim plugin"
edition = "2024"

[[bin]]
name = "kjn"
path = "src/main.rs"

[dependencies]
kenjutu-core = { path = "../crates/kenjutu-core" }
kenjutu-types = { path = "../crates/kenjutu-types", features = ["serde"] }
marker-commit = { path = "../crates/marker-commit" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
git2 = "0"
anyhow = "1"
