[package]
name = "kenjutu-nvim"
version = "0.1.0"
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Kenjutu Neovim backend — daemon for the Neovim plugin"
edition = "2024"

[[bin]]
name = "kjn"
path = "src/main.rs"

[features]
vendored-openssl = ["git2/vendored-openssl"]

[dependencies]
kenjutu-core = { workspace = true }
kenjutu-types = { workspace = true, features = ["serde"] }
marker-commit = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
git2 = { workspace = true }
anyhow = { workspace = true }
