[package]
name = "kenjutu"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
default-run="kenjutu"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "kenjutu_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-log = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
git2 = "0"
log = "0"
octocrab = "0.48.1"
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.31.0", features = ["bundled"] }
rusqlite-from-row = "0"
specta = "=2.0.0-rc.22"
tauri-specta = { version = "=2.0.0-rc.21", features = ["javascript", "typescript"] }
specta-typescript = "0.0.9"
dirs = "5.0"
sha1 = "0.10"
chrono = "0.4"
reqwest = { version = "0.12", features = ["json"] }
tauri-plugin-store = "2"
two-face = { version = "0.5", features = ["syntect-default-fancy"] }
thiserror = "2"
similar = "2"

[dev-dependencies]
tempfile = "3"
[target."cfg(any(target_os = \"macos\", windows, target_os = \"linux\"))".dependencies]
tauri-plugin-single-instance = "2.0.0"
