[package]
name = "kenjutu"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
default-run="kenjutu"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "kenjutu_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
git2 = "0"
kenjutu-core = { path = "../crates/kenjutu-core", features = ["specta"] }
kenjutu-types = { path = "../crates/kenjutu-types", features = ["specta", "serde"] }
log = "0"
marker-commit = { path = "../crates/marker-commit" }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
specta = "=2.0.0-rc.22"
specta-typescript = "0.0.9"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-log = "2"
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
tauri-specta = { version = "=2.0.0-rc.21", features = ["javascript", "typescript"] }
thiserror = "2"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
test-repo = { path = "../crates/test-repo" }
[target."cfg(any(target_os = \"macos\", windows, target_os = \"linux\"))".dependencies]
tauri-plugin-single-instance = "2.0.0"
