[package]
name = "kenjutu-tui"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "kenjutu"
path = "src/main.rs"

[dependencies]
kenjutu-core = { path = "../crates/kenjutu-core" }
kenjutu-types = { path = "../crates/kenjutu-types" }
marker-commit = { path = "../crates/marker-commit" }
git2 = "0"

ratatui = "0.29"
crossterm = "0.28"
thiserror = "2"
clap = { version = "4", features = ["derive"] }
log = "0"
env_logger = "0.11"
