[package]
name = "comment-commit"
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Inline comments engine — append-only comment storage with anchor-based porting"
edition = "2024"

[features]
specta = ["dep:specta"]

[dependencies]
kenjutu-types = { path = "../kenjutu-types", features = ["serde"] }
git2 = "0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
specta = { version = "=2.0.0-rc.22", optional = true }
thiserror = "2"
log = "0"
uuid = { version = "1", features = ["v4"] }
fs2 = "0.4.3"

[dev-dependencies]
test-repo = { path = "../test-repo" }
