[package]
name = "comment-commit"
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Inline comments engine — append-only comment storage with anchor-based porting"
edition = "2024"

[features]
specta = ["dep:specta"]

[dependencies]
kenjutu-types = { workspace = true, features = ["serde"] }
git2 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
specta = { workspace = true, optional = true }
thiserror = { workspace = true }
log = { workspace = true }
uuid = { version = "1", features = ["v4"] }
fs2 = { workspace = true }

[dev-dependencies]
test-repo = { workspace = true }
