[package]
name = "kenjutu-core"
version = "0.1.0"
edition = "2021"

[features]
specta = ["dep:specta", "kenjutu-types/specta"]

[dependencies]
dirs = "5.0"
git2 = "0"
kenjutu-types = { path = "../kenjutu-types", features = ["serde"] }
log = "0"
marker-commit = { path = "../marker-commit" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
similar = "2"
specta = { version = "=2.0.0-rc.22", optional = true }
thiserror = "2"
two-face = { version = "0.5", features = ["syntect-default-fancy"] }

[dev-dependencies]
test-repo = { path = "../test-repo" }
