[package]
name = "kenjutu-core"
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Core library for Kenjutu — diff generation, jj integration, and syntax highlighting"
edition = "2024"

[features]
specta = ["dep:specta", "kenjutu-types/specta"]

[dependencies]
git2 = { workspace = true }
kenjutu-types = { workspace = true, features = ["serde"] }
log = { workspace = true }
marker-commit = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
similar = "2"
specta = { workspace = true, optional = true }
thiserror = { workspace = true }
two-face = { version = "0.5", features = ["syntect-default-fancy"] }

[dev-dependencies]
test-repo = { workspace = true }
