[package]
name = "kenjutu-types"
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared types for Kenjutu — ChangeId, CommitId"
edition = "2024"

[features]
serde = ["dep:serde"]
specta = ["dep:specta"]

[dependencies]
git2 = "0"
serde = { version = "1", features = ["derive"], optional = true }
specta = { version = "=2.0.0-rc.22", optional = true }
