[package]
name = "kenjutu-types"
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared types for Kenjutu — ChangeId, CommitId"
edition = "2024"

[features]
serde = ["dep:serde"]
specta = ["dep:specta"]

[dependencies]
git2 = { workspace = true }
serde = { workspace = true, optional = true }
specta = { workspace = true, optional = true }
