[package]
name = "marker-commit"
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Review state engine — tracks review progress as git objects"
edition = "2024"

[dependencies]
kenjutu-types = { path = "../kenjutu-types" }
test-repo = { path = "../test-repo" }
fs2 = "0.4.3"
git2 = "0"
thiserror = "2"
log = "0"
