[package]
name = "marker-commit"
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Review state engine — tracks review progress as git objects"
edition = "2024"

[dependencies]
kenjutu-types = { workspace = true }
fs2 = { workspace = true }
git2 = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }

[dev-dependencies]
test-repo = { workspace = true }
