[package]
name = "test-repo"
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Test helper — creates temporary jj repos for integration tests"
edition = "2024"

[dependencies]
kenjutu-types = { workspace = true, features = ["serde"] }
serde = { workspace = true }
git2 = { workspace = true }
serde_json = { workspace = true }
tempfile = "3"
thiserror = { workspace = true }
